--- a/CalcBursts/CalcBursts.csproj
+++ b/CalcBursts/CalcBursts.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
+    <PackageReference Include="OxyPlot.ImageSharp" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
